--- a/src/components/styles/filter.scss
+++ b/src/components/styles/filter.scss
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 10px;
+    padding: 0px 10px;
     border-radius: 8px;
     background-color: linear-gradient(
       145deg,
@@ -23,14 +23,20 @@
     box-shadow: rgb(217 218 222) 4px 4px 8px inset,
       rgb(255 255 255) -4px -4px 8px inset;
 
+    @media only screen and (max-width: 600px) {
+      flex-direction: column;
+    }
+
     h3 {
       color: slategray;
       font-size: 20px;
+      padding: 8px 0;
     }
 
     .search {
       display: flex;
       align-items: center;
+      padding: 8px 0;
       .icon {
         color: black;
         font-size: 20px;
@@ -50,11 +56,12 @@
 
   .filter {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     margin: 10px 0 0 0;
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 0px 20px;
     border-radius: 8px;
     background-color: linear-gradient(
       145deg,
@@ -67,6 +74,7 @@
     .filter_sub {
       // display: flex;
       // align-items: center;
+      padding: 10px 15px;
 
       p {
         color: slategray;
@@ -125,7 +133,7 @@
         outline: none;
         border: none;
         border-radius: 8px;
-        font-weight: 500;
+        font-weight: 600;
         font-size: 16px;
         cursor: pointer;
         box-shadow: rgb(217 218 222) 2px 2px 4px, rgb(255 255 255) -2px -2px 4px;
