--- a/src/components/styles/propertyListing.scss
+++ b/src/components/styles/propertyListing.scss
@@ -2,8 +2,9 @@
   background-color: rgb(0, 61, 81);
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   // justify-content: space-between;
-  padding: 0% 8%;
+  padding: 1% 8%;
   color: black;
   background-color: #eef0f4;
 
