--- a/src/components/styles/propertyListing.scss
+++ b/src/components/styles/propertyListing.scss
@@ -2,11 +2,18 @@
   background-color: rgb(0, 61, 81);
   display: flex;
   flex-wrap: wrap;
+  height: 100%;
+
   justify-content: center;
   // justify-content: space-between;
   padding: 1% 8%;
   color: black;
   background-color: #eef0f4;
+  overflow-y: auto;
+
+  .error {
+    height: 100%;
+  }
 
   .property_card {
     // height: 350px;
