--- a/src/components/styles/propertyListing.scss
+++ b/src/components/styles/propertyListing.scss
@@ -12,12 +12,14 @@
   overflow-y: auto;
 
   .error {
-    height: 100%;
+    // height: 100%;
   }
 
   .property_card {
     // height: 350px;
+    height: auto;
     width: 275px;
+    max-height: 320px;
     background-color: white;
     border-radius: 4px;
     margin: 0 20px 30px 0;
