--- a/src/components/styles/filter.scss
+++ b/src/components/styles/filter.scss
@@ -3,7 +3,7 @@
   background-color: white;
   display: flex;
   flex-direction: column;
-  padding: 5% 8%;
+  padding: 4% 8% 2% 8%;
   // color: black;
   background-color: rgb(217 218 222);
   background-color: #eef0f4;
